feat: 简化配置，精简依赖，删除不需要的代码【4.0提交】

--- a/doc/deploy/docker-compose/env/nacos.env
+++ b/doc/deploy/docker-compose/env/nacos.env
@@ -1,12 +1,12 @@
-DATASOURCE_HOST=postgresql
-DATASOURCE_PORT=5432
-DATASOURCE_DB_NACOS=kcloud_platform_nacos
-DATASOURCE_USERNAME_NACOS=root
-DATASOURCE_PASSWORD_NACOS=laokou123
-DATASOURCE_PARAM_NACOS=tcpKeepAlive=true&reWriteBatchedInserts=true&ApplicationName=laokou-nacos&useSSL=false&stringtype=unspecified
-DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
-DATASOURCE_PLATFORM=postgresql
-JASYPT_ENCRYPTOR_PASSWORD=laokou
+NACOS_DS_PLATFORM=postgresql
+NACOS_DS_DRIVER=org.postgresql.Driver
+NACOS_DS_HOST=postgresql
+NACOS_DS_PORT=5432
+NACOS_DS_DB=kcloud_platform_nacos
+NACOS_DS_USERNAME=root
+NACOS_DS_PASSWORD=laokou123
+SERVICE_ID=laokou-nacos
+SECRET_KEY=laokou
 TZ=Asia/Shanghai
 LANG=zh_CN.UTF-8
 JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseCompactObjectHeaders -XX:+UseG1GC  -Duser.timezone=GMT+08"
