--- a/laokou-common/laokou-common-log4j2/pom.xml
+++ b/laokou-common/laokou-common-log4j2/pom.xml
@@ -30,7 +30,7 @@
         <artifactId>transmittable-thread-local</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
+      <groupId>tools.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
     <dependency>
