--- a/laokou-common/laokou-common-crypto/pom.xml
+++ b/laokou-common/laokou-common-crypto/pom.xml
@@ -34,7 +34,7 @@
       <artifactId>jackson-annotations</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
+      <groupId>tools.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
     <dependency>
