feat: 简化配置，精简依赖，删除不需要的代码【4.0提交】

--- a/doc/deploy/docker-compose/env/snail-job.env
+++ b/doc/deploy/docker-compose/env/snail-job.env
@@ -2,7 +2,7 @@ JOB_DS_DRIVER=org.postgresql.Driver
 JOB_DS_PLATFORM=postgresql
 JOB_DS_HOST=postgresql
 JOB_DS_PORT=5432
-JOB_DS_DATABASE=snail_job
+JOB_DS_DB=snail_job
 JOB_DS_USERNAME=root
 JOB_DS_PASSWORD=laokou123
 PROFILE=dev
