feat: 简化配置，精简依赖，删除不需要的代码，调整API版本【4.0提交】

--- a/laokou-common/laokou-common-lock/pom.xml
+++ b/laokou-common/laokou-common-lock/pom.xml
@@ -17,6 +17,10 @@
       <artifactId>laokou-common-redis</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
