--- a/laokou-common/laokou-common-cors/pom.xml
+++ b/laokou-common/laokou-common-cors/pom.xml
@@ -24,6 +24,7 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
