--- a/laokou-common/laokou-common-reactor/pom.xml
+++ b/laokou-common/laokou-common-reactor/pom.xml
@@ -26,6 +26,7 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
