--- a/laokou-service/laokou-iot/laokou-iot-client/pom.xml
+++ b/laokou-service/laokou-iot/laokou-iot-client/pom.xml
@@ -18,6 +18,12 @@
       <artifactId>laokou-common-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
