feat: nacos去掉undertow，还原成tomcat，为4.0升级做准备

--- a/laokou-cloud/laokou-nacos/src/main/resources/application.properties
+++ b/laokou-cloud/laokou-nacos/src/main/resources/application.properties
@@ -16,6 +16,20 @@
 #    */
 # 密钥
 jasypt.encryptor.password=@SECRET-KEY@
+# 开启请求压缩
+server.compression.enabled=true
+# 工作线程池的最大线程数
+server.tomcat.threads.max=500
+# 工作线程池的最小备用线程数
+server.tomcat.threads.min-spare=50
+# 最大连接数
+server.tomcat.max-connections=10000
+# 当所有工作线程都在忙时，允许等待处理的最大连接数
+server.tomcat.accept-count=200
+# URI编码
+server.tomcat.uri-encoding=UTF-8
+# 连接超时时间
+server.tomcat.connection-timeout=60s
 # 应用程序在发生错误时，HTTP 响应中始终返回具体的错误消息
 server.error.include-message=always
 # 关闭证书
