--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -37,8 +37,7 @@ server:
   forward-headers-strategy: native
   shutdown: graceful
   port: ${SERVER_PORT:1111}
-  servlet:
-    context-path: /api
+
   tomcat:
     threads:
       # 工作线程池的最大线程数
@@ -150,15 +149,15 @@ spring:
               - /swagger-ui/**=laokou-auth
               - /actuator/**=laokou-auth
               - /error=laokou-auth
-              - /v1/captchas/{uuid}=laokou-auth
-              - /v1/secrets=laokou-auth
+              - /api/v1/captchas/{uuid}=laokou-auth
+              - /api/v1/secrets=laokou-auth
               - /doc.html=laokou-auth
               - /webjars/**=laokou-auth
             POST:
-              - /v1/captchas/send/mail=laokou-auth
-              - /v1/captchas/send/mobile=laokou-auth
+              - /api/v1/captchas/send/mail=laokou-auth
+              - /api/v1/captchas/send/mobile=laokou-auth
             DELETE:
-              - /v1/tokens=laokou-auth
+              - /api/v1/tokens=laokou-auth
   datasource:
     dynamic:
       # 默认false,建议线上关闭
