--- a/laokou-cloud/laokou-nacos/pom.xml
+++ b/laokou-cloud/laokou-nacos/pom.xml
@@ -33,7 +33,7 @@
     <!--postgresql版本-->
     <postgresql.version>42.7.8</postgresql.version>
     <!--client-java版本-->
-    <client-java.version>22.0.1-legacy</client-java.version>
+    <client-java.version>22.0.0</client-java.version>
     <!--lombok版本-->
     <lombok.version>1.18.42</lombok.version>
     <!--jasypt版本-->
@@ -81,11 +81,6 @@
       <groupId>com.github.ulisesbocchio</groupId>
       <artifactId>jasypt-spring-boot-starter</artifactId>
       <version>${jasypt.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.liquibase</groupId>
-      <artifactId>liquibase-core</artifactId>
-      <version>${liquibase.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
