--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -121,6 +121,12 @@
     <dependency>
       <groupId>org.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>com.opencsv</groupId>
+          <artifactId>opencsv</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
@@ -159,6 +165,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-csv</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 
