--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,8 @@
     <docker-maven-plugin.version>0.46.0</docker-maven-plugin.version>
     <!--maven-checkstyle-plugin版本-->
     <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
+    <!--spotbugs-maven-plugin版本-->
+    <spotbugs-maven-plugin.version>4.9.5.0</spotbugs-maven-plugin.version>
     <!--native-maven-plugin版本-->
     <native-maven-plugin.version>0.11.1</native-maven-plugin.version>
     <!--versions-maven-plugin版本-->
@@ -233,6 +235,8 @@
     <jsqlparser.version>5.2</jsqlparser.version>
     <!--gson版本-->
     <gson.version>2.13.2</gson.version>
+    <!--spotbugs版本-->
+    <spotbugs.version>4.9.5</spotbugs.version>
     <!--docker主机-->
     <docker.host>tcp://127.0.0.1:2375</docker.host>
     <!--docker仓库-->
@@ -1106,6 +1110,18 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>${spotbugs-maven-plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs</artifactId>
+            <version>${spotbugs.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
     <!-- profile对资源的操作 -->
