--- a/laokou-service/laokou-oss/laokou-oss-proto/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-proto/pom.xml
@@ -47,6 +47,14 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>${spotbugs-maven-plugin.version}</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
