--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -339,8 +339,10 @@ springdoc:
     path: /v3/api-docs
   group-configs:
     - group: 'default'
-      paths-to-match: '/**'
-      packages-to-scan: org.laokou.auth.web
+      paths-to-match:
+       - '/**'
+      packages-to-scan:
+       - "org.laokou.auth.web"
 
 # mybatis-plus
 mybatis-plus:
