--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -219,9 +219,11 @@ springdoc:
     enabled: true
     path: /v3/api-docs
   group-configs:
-    - group: 'default'
-      paths-to-match: '/**'
-      packages-to-scan: org.laokou.admin.web
+    - group: default
+      paths-to-match:
+        - /**
+      packages-to-scan:
+        - org.laokou.admin.web
 
 # mybatis-plus
 mybatis-plus:
@@ -272,6 +274,6 @@ management:
 
 # knife4j的增强配置，不需要增强可以不配
 knife4j:
-  enable: true
+  enable: false
   setting:
     language: zh_cn
