--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -315,7 +315,7 @@ management:
 
 # knife4j的增强配置，不需要增强可以不配
 knife4j:
-  enable: true
+  enable: false
   setting:
     language: zh_cn
 
@@ -338,11 +338,11 @@ springdoc:
     enabled: true
     path: /v3/api-docs
   group-configs:
-    - group: 'default'
+    - group: default
       paths-to-match:
-       - '/**'
+        - /**
       packages-to-scan:
-       - "org.laokou.auth.web"
+        - org.laokou.auth.web
 
 # mybatis-plus
 mybatis-plus:
