--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,11 @@
 version: 2.1
 
-executors:
-  ubuntu:
+jobs:
+  build:
+    docker:
+      - image: cimg/openjdk:25.0.0
     environment:
       JVM_OPTS: -Xmx2048m
-      TERM: dumb
-    machine:
-      image: ubuntu-2404:2024.11.1
-      docker_layer_caching: true
-    resource_class: large
-
-jobs:
-  jdk25:
-    executor: ubuntu
     steps:
       - checkout
-      - run:
-          name: Install JDK 25
-          command: |
-            sudo wget https://download.oracle.com/java/25/latest/jdk-25_linux-x64_bin.tar.gz
-            sudo tar -zxvf jdk-25_linux-x64_bin.tar.gz
-            sudo echo "export JAVA_HOME=$PWD/jdk-25" >> $BASH_ENV
-            sudo echo "export PATH=$PWD/jdk-25/bin:$PATH" >> $BASH_ENV
-            source $BASH_ENV
-      - run:
-          name: Install specific Maven version
-          command: |
-            MAVEN_VERSION="3.9.11"
-            sudo wget https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz
-            sudo tar -zxvf apache-maven-${MAVEN_VERSION}-bin.tar.gz
-            sudo echo "export MAVEN_HOME=$PWD/apache-maven-${MAVEN_VERSION}" >> $BASH_ENV
-            sudo echo "export PATH=$PWD/apache-maven-${MAVEN_VERSION}/bin:$PATH" >> $BASH_ENV
-            source $BASH_ENV
-      - run:
-          name: Build with Maven
-          command: |
-            mvn clean install -P dev -DskipTests -B
-workflows:
-  maven-build:
-    jobs:
-      - jdk25
+      - run: mvn clean install -P dev -DskipTests
